--- a/templates/main/top.html
+++ b/templates/main/top.html
@@ -99,7 +99,7 @@
             </tr>
           </table>
           <div id="top-startbutton">
-            <a href="personal-diagnosis-start.html">診断スタート ▶</a>
+            <a href="{{ url_for('diagnosis.top') }}">診断スタート ▶</a>
           </div>  
         </div><!--jump-to-sindanの終わり-->
         <div id="top-news">
