fix: navigation & all

--- a/templates/main/top.html
+++ b/templates/main/top.html
@@ -50,10 +50,10 @@
           <a href="{{ url_for('shop.shop_get') }}">商品を探す</a>
         </div>
         <div class="nav-text">
-          <a href="{{ url_for('shop.shop_get') }}">コラム</a>
+          <a href="{{ url_for('column.column_top') }}">コラム</a>
         </div>
         <div class="nav-text">
-          <a href="{{ url_for('shop.shop_get') }}">掲示板</a>
+          <a href="{{ url_for('thread.thread_top') }}">掲示板</a>
         </div>
         <div class="nav-text">
           <a href="{{ url_for('main.top') }}">トップに戻る</a>
@@ -111,11 +111,11 @@
             </div>
             <div>
               <p class="date">2023.09.25</p>
-              <p class="content"><a href="{{ url_for('main.notice1') }}">お知らせ2---------------------------</a></p>
+              <p class="content"><a href="{{ url_for('main.notice2') }}">お知らせ2---------------------------</a></p>
             </div>
             <div>
               <p class="date">2023.09.25</p>
-              <p class="content"><a href="{{ url_for('main.notice1') }}">お知らせ3---------------------------</a></p>
+              <p class="content"><a href="{{ url_for('main.notice3') }}">お知らせ3---------------------------</a></p>
             </div>
           </div>
         </div><!--top-newsの終わり-->
