--- a/templates/main/notice3.html
+++ b/templates/main/notice3.html
@@ -34,22 +34,34 @@
   <nav class="nav-disable">
     <div id="nav-wrap">
       <div class="nav-text">
-        <a href="login.html">ログイン</a>
+        <!-- ログインしているユーザー名を返す -->
+        {% if current_user.is_authenticated %}
+        <a href="{{ url_for('user.index') }}">{{ current_user.name }}</a>
+        {% else %}
+        <a href="{{ url_for('auth.login') }}">ログイン</a>
+        {% endif %}
       </div>
       <div class="nav-text">
-        <a href="item-search-result.html">商品を探す</a>
+        <a href="{{ url_for('shop.shop_get') }}">商品を探す</a>
       </div>
       <div class="nav-text">
-        <a href="#">コラム</a>
+        <a href="{{ url_for('column.column_top') }}">コラム</a>
       </div>
       <div class="nav-text">
-        <a href="#">掲示板</a>
+        <a href="{{ url_for('thread.thread_top') }}">掲示板</a>
       </div>
       <div class="nav-text">
-        <a href="top.html">トップに戻る</a>
+        <a href="{{ url_for('main.top') }}">トップに戻る</a>
+      </div>
+      <div class="nav-text">
+        <a href="{{ url_for('main.userGuide') }}">使い方</a>
+      </div>
+      <div class="nav-text">
+        <a href="{{ url_for('main.inquiry') }}">お問い合わせ</a>
       </div>
     </div>
   </nav>
+  <div id="header-space"></div>
 
   <main>
     <!-- 見出し -->
@@ -57,36 +69,36 @@
       <h2>登録品種を出品する際の注意事項（種苗法について）</h2>
     </div>
 
-  <!-- 日付 -->
-  <div class="opendata">
-    <p>公開日 : 2023-9-27</p>
-  </div>
-  <!-- 内容 -->
-  <div class="Content">
-    <p>
-      いつもhortusをご利用いただきありがとうございます。
-    </p>
-    <p>
-      令和2年の種苗法改正により表示義務が強化され、義務を果たさない出品行為は種苗法違反となります。
-    </p>
+    <!-- 日付 -->
+    <div class="opendata">
+      <p>公開日 : 2023-9-27</p>
+    </div>
+    <!-- 内容 -->
+    <div class="Content">
+      <p>
+        いつもhortusをご利用いただきありがとうございます。
+      </p>
+      <p>
+        令和2年の種苗法改正により表示義務が強化され、義務を果たさない出品行為は種苗法違反となります。
+      </p>
       登録された品種の植物を販売する際は品種登録表示をしてください。栽培地・輸出先の制限がある場合はその旨も表示してください。
-    <p>
-      詳細は<a href="https://www.maff.go.jp/j/shokusan/syubyouhou/attach/pdf/index-23.pdf">農林水産省ホームページ</a>を参照ください。
-    </p>
+      <p>
+        詳細は<a href="https://www.maff.go.jp/j/shokusan/syubyouhou/attach/pdf/index-23.pdf">農林水産省ホームページ</a>を参照ください。
+      </p>
 
-    <p>
-      お客さまにhortusを安心・安全にご利用いただくため、ご理解とご協力のほどよろしくお願いいたします。
-    </p>
+      <p>
+        お客さまにhortusを安心・安全にご利用いただくため、ご理解とご協力のほどよろしくお願いいたします。
+      </p>
 
-    <div class="moving">
-      <a href="top.html">TOPページに戻る</a>
+      <div class="moving">
+        <a href="{{ url_for('main.top') }}">TOPページに戻る</a>
+      </div>
+
     </div>
 
-  </div>
 
-    
-  </div>
-</main>
+    </div>
+  </main>
 
   <footer></footer>
 
