--- a/templates/shop/item-search-resultold.html
+++ b/templates/shop/item-search-resultold.html
@@ -15,10 +15,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@300&display=swap" rel="stylesheet">
 
-  <title>商品検索結果</title>
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/common.css">
-  <link rel="stylesheet" href="css/item-search-result2.css">
+  <title>top</title>
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/reset.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/common.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/item-search-result.css') }}">
 </head>
 
 <body>
@@ -48,6 +48,7 @@
     </div>
   </nav>
 
+  <div id="header-space"></div>
 
   <main>
 
@@ -58,31 +59,31 @@
       </form>
       <div class="modal-001__wrap">
         <input type="radio" id="modal-001__open" class="modal-001__open-input" name="modal-001__trigger" />
-        <label for="modal-001__open" class="modal-001__open-label">カテゴリ▼</label>
+        <label for="modal-001__open" class="modal-001__open-label">カテゴリ</label>
         <input type="radio" id="modal-001__close" name="modal-001__trigger" />
         <div class="modal-001">
           <div class="modal-001__content-wrap">
             <label for="modal-001__close" class="modal-001__close-label">x</label>
             <div class="modal-001__content">
-              <h2 class="modal-subheading">カテゴリ一覧</h2>
+              <h2 class="modal-subheading">カテゴリー一覧</h2>
               <ul class="category-flex">
                 <a href="#">
-                  <li>花</li>
+                  <li>カテゴリ1</li>
                 </a>
                 <a href="#">
-                  <li>家庭菜園</li>
+                  <li>カテゴリ2</li>
                 </a>
                 <a href="#">
-                  <li>観葉植物</li>
+                  <li>カテゴリ3</li>
                 </a>
                 <a href="#">
-                  <li>多肉植物</li>
+                  <li>カテゴリ4</li>
                 </a>
                 <a href="#">
-                  <li>園芸用品</li>
+                  <li>カテゴリ5</li>
                 </a>
                 <a href="#">
-                  <li>肥料</li>
+                  <li>カテゴリ6</li>
                 </a>
               </ul>
             </div>
@@ -98,59 +99,33 @@
     <hr class="Separator">
 
     <!-- 商品 -->
-    <div class="item-search-result-wrapper"> <!-- カード全体 --> 
-                
-
-
-      <a href="#" class="item-search-result-card">
-        <div class="item-search-result-card-image-box">
-            <img class="item-search-result-card-image" src="images/flower01.jpg">
-        </div>
-        <div class="item-search-result-card-box">
-            <h2 class="item-search-result-card-title">商品のタイトル</h2>
-            <p class="item-search-result-card-description">テキスト</p>
-            <small>出品日時</small>
-            <small>出品者</small>
-        </div>
-    </a>
-
-    <a href="#" class="item-search-result-card">
-        <div class="item-search-result-card-image-box">
-            <img class="item-search-result-card-image" src="images/flower02.jpg">
-        </div>
-        <div class="item-search-result-card-box">
-            <h2 class="item-search-result-card-title">商品のタイトル</h2>
-            <p class="item-search-result-card-description">テキスト</p>
-            <small>出品日時</small>
-            <small>出品者</small>
-        </div>
-    </a>
-
-    <a href="#" class="item-search-result-card">
-        <div class="item-search-result-card-image-box">
-            <img class="item-search-result-card-image" src="images/flower03.jpg">
-        </div>
-        <div class="item-search-result-card-box">
-            <h2 class="item-search-result-card-title">商品のタイトル</h2>
-            <p class="item-search-result-card-description">テキスト</p>
-            <small>出品日時</small>
-            <small>出品者</small>
-        </div>
-    </a>
-
+    <div class="product-wrap">
+      <ul class="item-flex">
+        {% for product in products %}
+        <li>
+          <a href="{{ url_for('shop.product_detail', product_id = product.product_id) }}">
+            <figure>
+              <img src="/{{product.images[0].image}}" class="item-images" alt="花">
+            </figure>
+            <h3> {{ product.name }} </h3>
+            <p> {{ product.price }}円 </p>
+          </a>
+        </li>
+        {% endfor %}
+      </ul>
+    </div>
 
 
   </main>
-  <a href="#" id="page-top"></a>
+
 
   <footer>
-    
+
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"
     integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
-  <script src="js/common.js"></script>
-  <script src="js/item-search-result.js"></script>
+  <script src="{{ url_for('static', filename='js/common.js') }}"></script>
 </body>
 
 </html>
