add:mypageの写真が出てこないことを修正

--- a/templates/user/mypage.html
+++ b/templates/user/mypage.html
@@ -80,19 +80,19 @@
               <a href="{{ url_for('user.exhibit') }}">出品をする!</a>
           </div>
           <div class="history">
-            <a href="Purchase-history.html"><img src="images/cart.png" alt="購入履歴">購入履歴</a>
+            <a href="Purchase-history.html"><img src="../images/cart.png" alt="購入履歴">購入履歴</a>
           </div>
           <div class="history">
-            <a href="my-listing.html"><img src="images/flower.png" alt="出品物を見る">出品物を見る</a>
+            <a href="my-listing.html"><img src="../images/flower.png" alt="出品物を見る">出品物を見る</a>
           </div>
           <div class="history">
-            <a href="Waiting-approval.html"><img src="images/yajirusi.png" alt="交換了承待ち確認ページ">交換了承待ち一覧</a>
-            <a href="Waiting-approval.html"><img src="images/koramu.png" alt="自身の投稿したコラム確認ページ">投稿したコラム一覧</a>
+            <a href="Waiting-approval.html"><img src="../images/yajirusi.png" alt="交換了承待ち確認ページ">交換了承待ち一覧</a>
+            <a href="Waiting-approval.html"><img src="../images/koramu.png" alt="自身の投稿したコラム確認ページ">投稿したコラム一覧</a>
           </div>
           <div class="history">
-            <a href="information-change.html"><img src="images/akaunto.png" alt="会員情報の変更や削除">登録内容の変更</a>
-            <a href="inquiry.html"><img src="images/mail.png" alt="問い合わせはこちら">お問い合わせ</a>
-            <a href="{{ url_for('auth.logout') }}"><img src="images/exit.png" alt="ログアウト">ログアウト</a>
+            <a href="information-change.html"><img src="../images/akaunto.png" alt="会員情報の変更や削除">登録内容の変更</a>
+            <a href="inquiry.html"><img src="../images/mail.png" alt="問い合わせはこちら">お問い合わせ</a>
+            <a href="{{ url_for('auth.logout') }}"><img src="../images/exit.png" alt="ログアウト">ログアウト</a>
           </div>
           
     <div>
