--- a/templates/main/top.html
+++ b/templates/main/top.html
@@ -52,9 +52,9 @@
         <div class="nav-text">
           <a href="{{ url_for('column.column_top') }}">コラム</a>
         </div>
-        <div class="nav-text">
+        <!-- <div class="nav-text">
           <a href="{{ url_for('thread.thread_top') }}">掲示板</a>
-        </div>
+        </div> -->
         <div class="nav-text">
           <a href="{{ url_for('main.top') }}">トップに戻る</a>
         </div>
