add:mypage修正、写真追加しました！

--- a/templates/main/top.html
+++ b/templates/main/top.html
@@ -71,12 +71,12 @@
         <div id="top-category">
           <table>
             <tr>
-              <td><a href="{{ url_for('shop.shop_get') }}"><img src="images/flower.png" alt="花"></a></td>
-              <td><a href="{{ url_for('shop.shop_get') }}"><img src="images/homegarden.png" alt="家庭菜園"></a></td>
-              <td><a href="{{ url_for('shop.shop_get') }}"><img src="images/foliageplant.png" alt="観葉植物"></a></td>
-              <td><a href="{{ url_for('shop.shop_get') }}"><img src="images/succulents.png" alt="多肉植物"></a></td>
-              <td><a href="{{ url_for('shop.shop_get') }}"><img src="images/gardenplants.png" alt="園芸用品"></a></td>
-              <td><a href="{{ url_for('shop.shop_get') }}"><img src="images/fertilizer.png" alt="肥料"></a></td>
+              <td><a href="{{ url_for('shop.shop_get') }}"><img src="{{ url_for('static', filename='images/flower.jpg') }}"></a></td>
+              <td><a href="{{ url_for('shop.shop_get') }}"><img src="{{ url_for('static', filename='images/homegarden.png') }}"></a></td>
+              <td><a href="{{ url_for('shop.shop_get') }}"><img src="{{ url_for('static', filename='images/foliageplant.png') }}"></a></td>
+              <td><a href="{{ url_for('shop.shop_get') }}"><img src="{{ url_for('static', filename='images/succulents.png') }}"></a></td>
+              <td><a href="{{ url_for('shop.shop_get') }}"><img src="{{ url_for('static', filename='images/gardenplants.png') }}"></a></td>
+              <td><a href="{{ url_for('shop.shop_get') }}"><img src="{{ url_for('static', filename='images/fertilizer.png') }}"></a></td>
             </tr>
             <tr>
               <td>花</td>
