--- a/templates/user/my-listing.html
+++ b/templates/user/my-listing.html
@@ -22,31 +22,41 @@
   <nav class="nav-disable">
     <div id="nav-wrap">
       <div class="nav-text">
-        <a href="login.html">ログイン</a>
+        <!-- ログインしているユーザー名を返す -->
+        {% if current_user.is_authenticated %}
+        <a href="{{ url_for('user.index') }}">{{ current_user.name }}</a>
+        {% else %}
+        <a href="{{ url_for('auth.login') }}">ログイン</a>
+        {% endif %}
       </div>
       <div class="nav-text">
-        <a href="item-search-result.html">商品を探す</a>
+        <a href="{{ url_for('shop.shop_get') }}">商品を探す</a>
       </div>
       <div class="nav-text">
-        <a href="#">コラム</a>
+        <a href="{{ url_for('column.column_top') }}">コラム</a>
+      </div>
+      <!-- <div class="nav-text">
+        <a href="{{ url_for('thread.thread_top') }}">掲示板</a>
+      </div> -->
+      <div class="nav-text">
+        <a href="{{ url_for('main.top') }}">トップに戻る</a>
       </div>
       <div class="nav-text">
-        <a href="#">掲示板</a>
-      </div>
-      <div class="nav-text">
-        <a href="top.html">トップに戻る</a>
+        <a href="{{ url_for('main.userGuide') }}">使い方</a>
       </div>
     </div>
   </nav>
+  <div id="header-space"></div>
 
   <div id="my-listing-wrap">
     <main>
 
       <h1></h1>
       <div class="div-exchange-mypage-button">
-        <a href="mypage.html" class="exchange-mypage-button">マイページ</a>
+        <a href="{{ url_for('user.index') }}" class="exchange-mypage-button">マイページ</a>
       </div>
       <h2>自分が出品した商品一覧</h2>
+      {% for product in products %}
       <div class="my-listing-container">
         <table>
           <tr>
@@ -55,53 +65,23 @@
             <th>交換を許可</th>
           </tr>
           <tr>
-            <td>花１</td>
-            <td>2023/11/16</td>
-            <td>許可</td>
+            <td> {{ product.name }} </td>
+            <td> {{ product.created_at }} </td>
+            <td>
+              {% if product.is_barter %}
+              許可
+              {% else %}
+              不許可
+              {% endif %}
+            </td>
           </tr>
         </table>
         <div class="my-listing-container-button">
           <div class="my-listing-container-button-in"><button type="submit" class="yes-button">詳細ページ</button></div>
         </div>
       </div>
-      <div class="my-listing-container">
-        <table>
-          <tr>
-            <th>出品した商品</th>
-            <th>日付</th>
-            <th>交換を許可</th>
-          </tr>
-          <tr>
-            <td>花１</td>
-            <td>2023/11/16</td>
-            <td>許可</td>
-          </tr>
-        </table>
-        <div class="my-listing-container-button">
-          <div class="my-listing-container-button-in"><button type="submit" class="yes-button">詳細ページ</button></div>
-        </div>
-      </div>
-      <div class="my-listing-container">
-        <table>
-          <tr>
-            <th>出品した商品</th>
-            <th>日付</th>
-            <th>交換を許可</th>
-          </tr>
-          <tr>
-            <td>花１</td>
-            <td>2023/11/16</td>
-            <td>許可</td>
-          </tr>
-        </table>
-        <div class="my-listing-container-button">
-          <div class="my-listing-container-button-in"><button type="submit" class="yes-button">詳細ページ</button></div>
-        </div>
-      </div>
+      {% endfor %}
 
-
-      
-      
       <footer></footer>
     </main>
   </div>
