--- a/templates/user/mypage.html
+++ b/templates/user/mypage.html
@@ -84,8 +84,8 @@
                 alt="出品物を見る">出品物を見る</a>
           </div>
           <div class="history">
-            <a href="{{ url_for('user.trade') }}"><img src="{{ url_for('static', filename='images/yajirusi.png') }}"
-                alt="交換了承待ち確認ページ">交換了承待ち一覧</a>
+            <!-- <a href="{{ url_for('user.trade') }}"><img src="{{ url_for('static', filename='images/yajirusi.png') }}"
+                alt="交換了承待ち確認ページ">交換了承待ち一覧</a> -->
             <!-- <a href="Waiting-approval.html"><img src="{{ url_for('static', filename='images/koramu.png') }}"
                 alt="自身の投稿したコラム確認ページ">投稿したコラム一覧</a>
           </div> -->
