--- a/templates/diagnosis/personal-diagnosis-content-3.html
+++ b/templates/diagnosis/personal-diagnosis-content-3.html
@@ -31,19 +31,27 @@
   <nav class="nav-disable">
     <div id="nav-wrap">
       <div class="nav-text">
-        <a href="login.html">ログイン</a>
+        <!-- ログインしているユーザー名を返す -->
+        {% if current_user.is_authenticated %}
+        <a href="{{ url_for('user.index') }}">{{ current_user.name }}</a>
+        {% else %}
+        <a href="{{ url_for('auth.login') }}">ログイン</a>
+        {% endif %}
       </div>
       <div class="nav-text">
-        <a href="item-search-result.html">商品を探す</a>
+        <a href="{{ url_for('shop.shop_get') }}">商品を探す</a>
       </div>
       <div class="nav-text">
-        <a href="#">コラム</a>
+        <a href="{{ url_for('column.column_top') }}">コラム</a>
+      </div>
+      <!-- <div class="nav-text">
+        <a href="{{ url_for('thread.thread_top') }}">掲示板</a>
+      </div> -->
+      <div class="nav-text">
+        <a href="{{ url_for('main.top') }}">トップに戻る</a>
       </div>
       <div class="nav-text">
-        <a href="#">掲示板</a>
-      </div>
-      <div class="nav-text">
-        <a href="top.html">トップに戻る</a>
+        <a href="{{ url_for('main.userGuide') }}">使い方</a>
       </div>
     </div>
   </nav>
@@ -56,7 +64,7 @@
     </div>
     <div id="select-question">
       <div class="question-img-wrap">
-        <img src="{{ url_for('static', filename='images/question3-2.jpg') }}" alt="test1">
+        <img src="{{ url_for('static', filename='images/question3-1.jpg') }}" alt="test1">
         <div>
           <a href="{{ url_for('diagnosis.question4', count = count) }}" class="button">良い</a>
         </div>
