add:診断の画像urlをjinjaに変更

--- a/templates/diagnosis/personal-diagnosis-telling-19.html
+++ b/templates/diagnosis/personal-diagnosis-telling-19.html
@@ -58,7 +58,7 @@
       <div class="contents-wrap">
         <div class="flower-wrap">
           <div class="flower-image">
-            <img src="./images/19-Begonia.jpg" alt="flower">
+            <img src="{{ url_for('static', filename='images/19-Begonia.jpg') }}" alt="flower">
           </div>
           <div class="flower-text">
             <h1>ベゴニア</h1>
