--- a/templates/diagnosis/personal-diagnosis-telling-31.html
+++ b/templates/diagnosis/personal-diagnosis-telling-31.html
@@ -58,7 +58,7 @@
       <div class="contents-wrap">
         <div class="flower-wrap">
           <div class="flower-image">
-            <img src="./images/31-Spathiphyllum.jpg" alt="flower">
+            <img src="{{ url_for('static', filename='images/31-Spathiphyllum.jpg') }}" alt="flower">
           </div>
           <div class="flower-text">
             <h1>スパティフィラム<br>(ピースリリー)</h1>
