--- a/templates/diagnosis/personal-diagnosis-telling-14.html
+++ b/templates/diagnosis/personal-diagnosis-telling-14.html
@@ -58,7 +58,7 @@
       <div class="contents-wrap">
         <div class="flower-wrap">
           <div class="flower-image">
-            <img src="./images/14-Viola.jpg" alt="flower">
+            <img src="{{ url_for('static', filename='images/14-Viola.jpg') }}" alt="flower">
           </div>
           <div class="flower-text">
             <h1>ビオラ</h1>
