--- a/templates/diagnosis/personal-diagnosis-telling-35.html
+++ b/templates/diagnosis/personal-diagnosis-telling-35.html
@@ -58,7 +58,7 @@
       <div class="contents-wrap">
         <div class="flower-wrap">
           <div class="flower-image">
-            <img src="./images/35-Gomunoki.jpg" alt="flower">
+            <img src="{{ url_for('static', filename='images/35-Gomunoki.jpg') }}" alt="flower">
           </div>
           <div class="flower-text">
             <h1>ゴムの木</h1>
