--- a/templates/diagnosis/personal-diagnosis-telling-36.html
+++ b/templates/diagnosis/personal-diagnosis-telling-36.html
@@ -58,7 +58,7 @@
       <div class="contents-wrap">
         <div class="flower-wrap">
           <div class="flower-image">
-            <img src="./images/36-Orchid.jpg" alt="flower">
+            <img src="{{ url_for('static', filename='images/36-Orchid.jpg') }}" alt="flower">
           </div>
           <div class="flower-text">
             <h1>オーキッド (洋ラン)</h1>
