add:診断結果検索urlをjinjaに変更

--- a/templates/diagnosis/personal-diagnosis-telling-1.html
+++ b/templates/diagnosis/personal-diagnosis-telling-1.html
@@ -75,7 +75,7 @@
               </p>
               <div class="flower-button">
                 <!-- ページ完成次第変更 -->
-                <a href="item-search-result.html" class="button">検索ページに飛んでみる ></a>
+                <a href="{{ url_for('shop.shop_get') }}" class="button">検索ページに飛んでみる ></a>
               </div>
           </div>
         </div>
