add:お知らせの見出し

--- a/templates/main/top.html
+++ b/templates/main/top.html
@@ -104,15 +104,15 @@
           <div id="Announcement">
             <div>
               <p class="date">2023.09.25</p>
-              <p class="content"><a href="{{ url_for('main.notice1') }}">お知らせ1---------------------------</a></p>
+              <p class="content"><a href="{{ url_for('main.notice1') }}"> STOP詐欺被害 − 違反行為の勧誘を断り、安全な取引を心がけましょう</a></p>
             </div>
             <div>
               <p class="date">2023.09.25</p>
-              <p class="content"><a href="{{ url_for('main.notice2') }}">お知らせ2---------------------------</a></p>
+              <p class="content"><a href="{{ url_for('main.notice2') }}"> 公有地や他人の私有地で許可無く採取したものの出品について </a></p>
             </div>
             <div>
               <p class="date">2023.09.25</p>
-              <p class="content"><a href="{{ url_for('main.notice3') }}">お知らせ3---------------------------</a></p>
+              <p class="content"><a href="{{ url_for('main.notice3') }}">登録品種を出品する際の注意事項（種苗法について）</a></p>
             </div>
           </div>
         </div><!--top-newsの終わり-->
