--- a/templates/column/column-post.html
+++ b/templates/column/column-post.html
@@ -50,9 +50,9 @@
         <div class="nav-text">
           <a href="{{ url_for('shop.shop_get') }}">商品を探す</a>
         </div>
-        <div class="nav-text">
+        <!-- <div class="nav-text">
           <a href="{{ url_for('column.column_top') }}">コラム</a>
-        </div>
+        </div> -->
         <!-- <div class="nav-text">
           <a href="{{ url_for('thread.thread_top') }}">掲示板</a>
         </div> -->
