--- a/templates/diagnosis/personal-diagnosis-telling.html
+++ b/templates/diagnosis/personal-diagnosis-telling.html
@@ -50,9 +50,9 @@
       <!-- <div class="nav-text">
         <a href="{{ url_for('thread.thread_top') }}">掲示板</a>
       </div> -->
-      <div class="nav-text">
+      <!-- <div class="nav-text">
         <a href="{{ url_for('main.top') }}">トップに戻る</a>
-      </div>
+      </div> -->
       <div class="nav-text">
         <a href="{{ url_for('main.userGuide') }}">使い方</a>
       </div>
