--- a/templates/user/Purchase-history().html
+++ b/templates/user/Purchase-history().html
@@ -28,7 +28,33 @@
       <div class="open-btn"><span></span><span></span><span></span></div>
     </div>
   </header>
-  http://127.0.0.1:5000
+  <nav class="nav-disable">
+    <div id="nav-wrap">
+      <div class="nav-text">
+        <!-- ログインしているユーザー名を返す -->
+        {% if current_user.is_authenticated %}
+        <a href="{{ url_for('user.index') }}">{{ current_user.name }}</a>
+        {% else %}
+        <a href="{{ url_for('auth.login') }}">ログイン</a>
+        {% endif %}
+      </div>
+      <div class="nav-text">
+        <a href="{{ url_for('shop.shop_get') }}">商品を探す</a>
+      </div>
+      <!-- <div class="nav-text">
+        <a href="{{ url_for('column.column_top') }}">コラム</a>
+      </div> -->
+      <!-- <div class="nav-text">
+        <a href="{{ url_for('thread.thread_top') }}">掲示板</a>
+      </div> -->
+      <div class="nav-text">
+        <a href="{{ url_for('main.top') }}">トップに戻る</a>
+      </div>
+      <div class="nav-text">
+        <a href="{{ url_for('main.userGuide') }}">使い方</a>
+      </div>
+    </div>
+  </nav>
   <div id="header-space"></div>
 
   <main>
