--- a/static/css/registration.css
+++ b/static/css/registration.css
@@ -4,10 +4,6 @@ div.wrapper {
     height: 100%;
 }
 
-a {
-    text-decoration: underline;
-    color: rgba(34, 100, 49, 0.9);;
-}
 
 form {
     display: flex;
@@ -53,6 +49,7 @@ button:hover {
 .registration-h2 {
     width: 100%;
     height: 100px;
+    text-align: center;
 }
 
 .registration-h2 h2 {
@@ -64,7 +61,7 @@ button:hover {
 .container {
     display: flex;
     flex-direction: column;
-    width: 500px;
+    width: 600px;
     height: 400px;
     margin: 0 auto 0 auto;
 
